--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-#hidden {
-  display: none;
-}
-
-.show {
-  display: block;
-}
-
 body {
   background-color:#F7ad45;
   text-align: center;
@@ -14,7 +6,9 @@ body {
   padding-top: 25px;
   flex-shrink: inherit;
 }
-
+.hidden {
+  display: none;
+}
 .header {
   font-size: xx-large;
 }
