change color locations in CSS, remove unworking 2nd pizza functions

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ body {
   padding-bottom: 250px;
   padding-top: 25px;
   flex-shrink: inherit;
-  border-left: 70px solid #bb3e00;
-  border-right: 70px solid #bb3e00;
+  border-left: 100px solid #bb3e00;
+  border-right: 100px solid #bb3e00;
 }
 .hidden {
   display: none;
@@ -20,10 +20,10 @@ body {
   list-style-position: inside;
   background-color: #FFF1D7;
   padding-right: 30px;
-  border-top: 30px solid #5f8d37;
+  border-top: 50px solid #5f8d37;
   border-left: 200px solid #bb3e00;
   border-right: 200px solid #bb3e00;
-  border-bottom: 20px solid #5f8d37;
+  border-bottom: 20px solid #F7ad45;
   padding-top: 10px;
 }
 .premium {
@@ -32,10 +32,10 @@ body {
   list-style-position: inside;
   background-color: #FFF1D7;
   padding-right: 30px;
-  border-top: 20px solid #F7ad45;
+  border-top: 20px solid #5f8d37;
   border-left: 175px solid #bb3e00;
   border-right: 175px solid #bb3e00;
-  border-bottom: 20px solid #5f8d37;
+  border-bottom: 20px solid #F7ad45;
   padding-top: 10px;
 }
 
@@ -45,11 +45,10 @@ body {
   list-style-position: inside;
   background-color: #FFF1D7;
   padding-right: 30px;
-  border-top: 20px solid #F7ad45;
+  border-top: 20px solid #5f8d37;
   border-left: 150px solid #bb3e00;
   border-right: 150px solid #bb3e00;
-  border-bottom: 20px solid #5f8d37;
-  padding-top: 10px;
+  border-bottom: 20px solid #F7ad45;
 }
 
 .size {
@@ -58,7 +57,7 @@ body {
   list-style-position: inside;
   background-color: #FFF1D7;
   padding-right: 30px;
-  border-top: 20px solid #F7ad45;
+  border-top: 20px solid #5f8d37;
   border-left: 125px solid #bb3e00;
   border-right: 125px solid #bb3e00;
   border-bottom: 20px solid #5f8d37;
